# passaporte

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
charts/lareira-passaporte/: Chart.yaml  values.yaml
examples/: fleet.lisp
src/: config.rs  lib.rs  render.rs
