[package]
name = "passaporte"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
repository = "https://github.com/pleme-io/passaporte"
authors = ["pleme-io <ops@pleme.io>"]
description = "Typed identity primitive for the saguão fleet — typed wrapper over Authentik"

[lib]
name = "passaporte"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

# tatara-lisp authoring surface — feature-gated.
tatara-lisp = { git = "https://github.com/pleme-io/tatara", optional = true }
tatara-lisp-derive = { git = "https://github.com/pleme-io/tatara", optional = true }

[features]
default = []
# Enables `#[derive(TataraDomain)]` so Passaporte can be authored as
# `(defpassaporte …)` Lisp forms.
tatara-lisp = ["dep:tatara-lisp", "dep:tatara-lisp-derive"]

[dev-dependencies]
serde_yaml = "0.9"

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
